--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,71 @@
+.header {
+  height: 100vh;
+  background-image: url("../img/bg3.jpg");
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  position: relative;
+}
+.header .banner-caption {
+  text-align: center;
+  padding-top: 25vh;
+  font-size: 200%;
+  color: #ffffff;
+}
+.header .banner-caption h1 {
+  font-size: 200%;
+}
+.header .arrow {
+  text-align: center;
+  bottom: 10vh;
+  position: absolute;
+  z-index: 5;
+  margin: auto;
+  width: 100vw;
+}
+.header .arrow a {
+  text-decoration: none;
+  color: white;
+  animation: bounce 2s infinite;
+}
+.header svg {
+  height: 150px;
+  width: 100vw;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 3;
+}
+.header svg path {
+  fill: white;
+}
 
+@-webkit-keyframes bounce {
+  from, 20%, 53%, 80%, to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  40%, 43% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -30px, 0);
+    transform: translate3d(0, -30px, 0);
+  }
+  70% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -15px, 0);
+    transform: translate3d(0, -15px, 0);
+  }
+  90% {
+    -webkit-transform: translate3d(0, -4px, 0);
+    transform: translate3d(0, -4px, 0);
+  }
+}
+body {
+  font-family: "Raleway", san-serif;
+}
 
 /*# sourceMappingURL=style.css.map */
