--- a/src/sass/header.sass
+++ b/src/sass/header.sass
@@ -1,6 +1,9 @@
+.navbar-toggler 
+    outline: none !important
+
 .header
     height: 100vh
-    background-image: url("../img/bg3.jpg")
+    background-image: url("../img/bg5.jpg")
     background-size: cover
     background-position: center
     overflow: hidden
@@ -8,7 +11,7 @@
 
     .banner-caption
         text-align: center
-        padding-top: 25vh
+        padding-top: 18vh
         font-size: 200%
         color: #ffffff
         h1 
@@ -21,11 +24,10 @@
         z-index: 5
         margin: auto
         width: 100vw
-        animation: fyn 1s infinite
         a 
             text-decoration: none  
             color: white
-            
+            animation: bounce 2.5s infinite ease
         
     svg 
         height: 150px
@@ -40,34 +42,34 @@
     
         
 
-@-webkit-keyframes fyn 
+@-webkit-keyframes bounce 
   from,
     20%,
     53%,
     80%,
   to 
-        -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1
-        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1)
-        -webkit-transform: translate3d(0, 0, 0)
-        transform: translate3d(0, 0, 0)
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1)
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1)
+    -webkit-transform: translate3d(0, 0, 0)
+    transform: translate3d(0, 0, 0)
   
 
-    40%,
-    43% 
-        -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06)
-        animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06)
-        -webkit-transform: translate3d(0, -30px, 0)
-        transform: translate3d(0, -30px, 0)
+  40%,
+  43% 
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06)
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06)
+    -webkit-transform: translate3d(0, -30px, 0)
+    transform: translate3d(0, -30px, 0)
   
 
   70% 
-        -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06)
-        animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06)
-        -webkit-transform: translate3d(0, -15px, 0)
-        transform: translate3d(0, -15px, 0)
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06)
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06)
+    -webkit-transform: translate3d(0, -15px, 0)
+    transform: translate3d(0, -15px, 0)
   
 
   90% 
-        -webkit-transform: translate3d(0, -4px, 0)
-        transform: translate3d(0, -4px, 0)
+    -webkit-transform: translate3d(0, -4px, 0)
+    transform: translate3d(0, -4px, 0)
   
