--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,10 @@
+.navbar-toggler {
+  outline: none !important;
+}
+
 .header {
   height: 100vh;
-  background-image: url("../img/bg3.jpg");
+  background-image: url("../img/bg5.jpg");
   background-size: cover;
   background-position: center;
   overflow: hidden;
@@ -8,7 +12,7 @@
 }
 .header .banner-caption {
   text-align: center;
-  padding-top: 25vh;
+  padding-top: 18vh;
   font-size: 200%;
   color: #ffffff;
 }
@@ -26,7 +30,7 @@
 .header .arrow a {
   text-decoration: none;
   color: white;
-  animation: bounce 2s infinite;
+  animation: bounce 2.5s infinite ease;
 }
 .header svg {
   height: 150px;
@@ -64,6 +68,59 @@
     transform: translate3d(0, -4px, 0);
   }
 }
+#about {
+  padding-top: 8%;
+  padding-bottom: 8%;
+}
+#about .container .row .about-img {
+  position: relative;
+}
+#about .container .row .about-img img:before {
+  content: "";
+  background-color: #df2828;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: -10%;
+  left: -10%;
+  z-index: 0;
+}
+#about .container .row .about-img img {
+  width: 80%;
+  height: auto;
+  box-shadow: -25px 35px 0px rgba(228, 228, 228, 0.411), -25px 35px 0px rgba(228, 228, 228, 0.411), -25px 35px 0px rgba(228, 228, 228, 0.411), -25px 35px 0px rgba(228, 228, 228, 0.411), -25px 35px 0px #a8a8a8;
+}
+#about .container .row .col-lg-7 {
+  max-height: 58.33333%;
+}
+#about .container .row .col-lg-7 .about-content .about-heading h2 {
+  text-transform: uppercase;
+}
+#about .container .row .col-lg-7 .about-content .about-button a {
+  display: inline-block;
+  background-color: #222222;
+  padding: 10px 35px;
+  border: 2px solid #222222;
+  text-transform: uppercase;
+  transition: 0.6s background-color ease;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: 600;
+  text-decoration: none;
+  color: white;
+}
+#about .container .row .col-lg-7 .about-content .about-button a:hover {
+  background-color: white;
+  color: #222222;
+}
+
+.services {
+  padding-top: 25;
+}
+.services .container .row .service-item {
+  text-align: center;
+}
+
 body {
   font-family: "Raleway", san-serif;
 }
