--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,7 @@
 @import './header'
 @import './about'
 @import './services'
+@import './savoirEtre'
 
-body 
+body
     font-family: "Raleway", san-serif
