--- a/src/css/style.css
+++ b/src/css/style.css
@@ -115,10 +115,38 @@
 }
 
 .services {
-  padding-top: 25;
+  background-color: #eeeeee;
+}
+.services .container h2 {
+  text-transform: uppercase;
 }
 .services .container .row .service-item {
   text-align: center;
+}
+.services .container .row .service-item .icon {
+  border: 1px solid #e3e3e3;
+  transition: 0.5s all ease;
+  color: #222;
+  display: inline-block;
+  margin-bottom: 20px;
+  font-size: 20px;
+  border-radius: 50%;
+  line-height: 78px;
+  height: 80px;
+  width: 80px;
+}
+.services .container .row .service-item .icon:hover {
+  background-color: #ffffff;
+  box-shadow: 0 15px 60px rgba(0, 0, 0, 0.25);
+}
+.services .container .row .service-item h4 {
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 16px;
+  text-transform: uppercase;
+}
+.services .container .row .service-item p {
+  font-size: 16px;
 }
 
 body {
