--- a/src/sass/about.sass
+++ b/src/sass/about.sass
@@ -5,6 +5,7 @@
         .row 
             .about-img 
                 position: relative
+                justify-content: flex-end
                 img:before 
                     content: ""
                     background-color: #df2828
@@ -15,6 +16,7 @@
                     left: -10%
                     z-index: 0
                 img 
+                
                     width: 80%
                     height: auto
                     box-shadow:-25px 35px 0px rgba(228, 228, 228, 0.411),-25px 35px 0px  rgba(228, 228, 228, 0.411),-25px 35px 0px  rgba(228, 228, 228, 0.411),-25px 35px 0px  rgba(228, 228, 228, 0.411),-25px 35px 0px rgb(168, 168, 168)
@@ -23,10 +25,14 @@
     
             .col-lg-7
                 max-height: 58.33333%
+                font-size: 19px
                 .about-content 
                     .about-heading  
                         h2 
                             text-transform: uppercase
+
+                    p 
+                        font-size: 16px
                     .about-button 
                         a 
                             display: inline-block
@@ -34,7 +40,7 @@
                             padding: 10px 35px
                             border: 2px solid #222222
                             text-transform: uppercase 
-                            transition: .6s background-color ease
+                            transition: .8s background-color ease
                             cursor: pointer
                             font-size: 13px 
                             font-weight: 600
