--- a/src/sass/header.sass
+++ b/src/sass/header.sass
@@ -15,7 +15,12 @@
         font-size: 200%
         color: #ffffff
         h1 
-            font-size: 200%
+          font-size: 88px
+          font-weight: 900
+          color: #fff
+
+        p 
+          font-size: 24px
     
     .arrow 
         text-align: center
