--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,7 +1,30 @@
 @import './header'
+@import './nav'
 @import './about'
 @import './services'
 @import './savoirEtre'
+@import './skills'
 
 body
     font-family: "Raleway", san-serif
+
+
+.sticky 
+    position: fixed
+    top: 0
+    width: 100% 
+    background-color: white 
+    color: black
+    z-index: 40
+    transition: 1s
+    box-shadow: 0px 5px 7px grey
+    
+.trans 
+    position: fixed
+    top: -100px
+    width: 100% 
+    z-index: 40
+    transition: 1s
+
+html 
+    scroll-behavior: smooth
