Section Contact finie

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -4,6 +4,8 @@
 @import './services'
 @import './savoirEtre'
 @import './skills'
+@import './formulaire'
+@import './media'
 
 body
     font-family: "Raleway", san-serif
@@ -28,3 +30,9 @@ body
 
 html 
     scroll-behavior: smooth
+
+.conInfo
+    
+    .meme 
+        display: flex
+        justify-content: center
