--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,6 +6,7 @@
 @import './skills'
 @import './formulaire'
 @import './media'
+@import './footer'
 
 body
     font-family: "Raleway", san-serif
@@ -36,3 +37,11 @@ html
     .meme 
         display: flex
         justify-content: center
+.bordTop 
+    border-width: 3px
+    border-style: solid
+    border-image: linear-gradient(to top, black, rgba(0, 0, 0, 0)) 1 100%
+.bordSide
+    border-width: 3px
+    border-style: solid
+    border-image: linear-gradient(to bottom, black  , rgba(0, 0, 0, 0)) 1 100%
