ajouter les projets

--- a/src/sass/footer.sass
+++ b/src/sass/footer.sass
@@ -5,7 +5,7 @@
     .contact
         padding: 0
         margin: 0
-        margin-top: 80px
+        margin-top: 35px
      
         min-width: 100vh
         .container 
@@ -16,8 +16,7 @@
                 justify-content: space-between
             
          
-            .r1
-                dis
+            
             .r2
                 hr 
                     margin-top: 1rem
@@ -37,15 +36,14 @@
     left: 100%
     width: 100%
     height: 100%
-    background: #00bcd4
+    background: linear-gradient(to left, white, rgba(0, 0, 0, 0)) 
     transition: 1s
 
 
 .box .icon h4::before
     left: inherit
     right: 100%
-    background: #9c27b0
-
+    background: linear-gradient(to right, white, rgba(0, 0, 0, 0)) 
 
 .box .fa:hover ~ h4::before
     left: initial
