--- a/src/sass/nav.sass
+++ b/src/sass/nav.sass
@@ -1,8 +1,10 @@
 .navbar-brand 
     font-size: 22px
     font-weight: 900
+    z-index: 3
 
 .collapse
+    z-index: 3
     .navbar-nav
 
         li
@@ -13,3 +15,26 @@
             a
                 text-transform: uppercase
                 font-size: 13px
+
+nav.fixed-top 
+    .nav-item 
+        .nav-link:hover:before 
+            background-color: #000 
+
+nav.navbar 
+    .nav-item 
+        .nav-link:hover:before 
+            content: ""
+            position: absolute
+            width: 100%
+            height: 2px
+            bottom: 0
+            left: 0
+            background-color: #fff
+            visibility: hidden
+            -webkit-transform: scaleX(0)
+            -ms-transform: scaleX(0)
+            transform: scaleX(0)
+            -webkit-transition: all 0.3s ease-in-out 0s
+            -o-transition: all 0.3s ease-in-out 0s
+            transition: all 0.3s ease-in-out 0s
