--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,6 +49,11 @@
   fill: white;
 }
 
+@media screen and (max-width: 767px) {
+  #home-svg {
+    height: 80px;
+  }
+}
 @-webkit-keyframes bounce {
   from, 20%, 53%, 80%, to {
     -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
@@ -76,8 +81,12 @@
 .navbar-brand {
   font-size: 22px;
   font-weight: 900;
+  z-index: 3;
 }
 
+.collapse {
+  z-index: 3;
+}
 .collapse .navbar-nav li {
   font-weight: 700;
   padding-right: 13px;
@@ -87,6 +96,27 @@
 .collapse .navbar-nav li a {
   text-transform: uppercase;
   font-size: 13px;
+}
+
+nav.fixed-top .nav-item .nav-link:hover:before {
+  background-color: #000;
+}
+
+nav.navbar .nav-item .nav-link:hover:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  -ms-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -o-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
 }
 
 #about {
@@ -353,7 +383,7 @@ h2 {
 .footer .contact {
   padding: 0;
   margin: 0;
-  margin-top: 80px;
+  margin-top: 35px;
   min-width: 100vh;
 }
 .footer .contact .container {
@@ -382,14 +412,14 @@ h2 {
   left: 100%;
   width: 100%;
   height: 100%;
-  background: #00bcd4;
+  background: linear-gradient(to left, white, rgba(0, 0, 0, 0));
   transition: 1s;
 }
 
 .box .icon h4::before {
   left: inherit;
   right: 100%;
-  background: #9c27b0;
+  background: linear-gradient(to right, white, rgba(0, 0, 0, 0));
 }
 
 .box .fa:hover ~ h4::before {
@@ -429,6 +459,20 @@ h2 {
 .box .fa:hover ~ h3,
 .box .fa:hover ~ h4 {
   color: white;
+}
+
+.projects {
+  background-color: #e2e2e27a;
+}
+.projects .container .row .col .portfolio-filter li {
+  display: inline-block;
+  font-size: 14px;
+  margin-right: 20px;
+  color: #222;
+  position: relative;
+  font-family: "Raleway", san-serif;
+  cursor: pointer;
+  text-transform: uppercase;
 }
 
 body {
