--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -46,3 +46,8 @@ html
     border-width: 3px
     border-style: solid
     border-image: linear-gradient(to bottom, black  , rgba(0, 0, 0, 0)) 1 100%
+
+button:focus 
+    outline: none
+a:focus 
+    outline: none
