--- a/src/sass/nav.sass
+++ b/src/sass/nav.sass
@@ -16,6 +16,28 @@
                 text-transform: uppercase
                 font-size: 13px
 
+            a::before,a::after
+                content: ""
+                background-color: red
+                height: 3px
+                position: absolute
+                bottom: 0px
+                width: 0
+
+            a:hover 
+                color: blue
+            a:hover::after
+                width: 50%
+                right: 50%
+                transition: width 1s ease-in-out
+
+            a:hover::before
+                width: 50% 
+                left: 50%
+                transition: width 1s ease-in-out
+
+    
+
 nav.fixed-top 
     .nav-item 
         .nav-link:hover:before 
