Fin de la responsivité du footer

--- a/src/sass/footer.sass
+++ b/src/sass/footer.sass
@@ -1,33 +1,30 @@
 .footer 
     background-color: #222
     padding-top: 10px
+    margin-top: 35px
 
-    .contact
-        padding: 0
-        margin: 0
-        margin-top: 35px
-     
-        min-width: 100vh
-        .container 
-            width: 900px
-            margin:  auto
-            .medIc 
-                display: flex
-                justify-content: space-between
+
+    .medIc   
+        margin: 0 10000px
+        display: flex 
+        justify-content: center
+    
+    .r2
+        display: flex 
+        hr 
+            margin-top: 1rem
+            margin-bottom: 1rem
+            border: 0
+            border-top: 2px solid rgba(216, 213, 213, 0.1)
+        p 
+            color: white 
+ 
+        
             
          
             
-            .r2
-                hr 
-                    margin-top: 1rem
-                    margin-bottom: 1rem
-                    border: 0
-                    border-top: 2px solid rgba(216, 213, 213, 0.1)
-                p 
-                    color: white 
 
              
-
 .box .icon h4::before,
 .box .icon h3::before
     content: ""
