--- a/src/css/style.css
+++ b/src/css/style.css
@@ -97,27 +97,6 @@
   text-transform: uppercase;
   font-size: 13px;
 }
-.collapse .navbar-nav li a::before, .collapse .navbar-nav li a::after {
-  content: "";
-  background-color: red;
-  height: 3px;
-  position: absolute;
-  bottom: 0px;
-  width: 0;
-}
-.collapse .navbar-nav li a:hover {
-  color: blue;
-}
-.collapse .navbar-nav li a:hover::after {
-  width: 50%;
-  right: 50%;
-  transition: width 1s ease-in-out;
-}
-.collapse .navbar-nav li a:hover::before {
-  width: 50%;
-  left: 50%;
-  transition: width 1s ease-in-out;
-}
 
 nav.fixed-top .nav-item .nav-link:hover:before {
   background-color: #000;
@@ -400,28 +379,23 @@ h2 {
 .footer {
   background-color: #222;
   padding-top: 10px;
-}
-.footer .contact {
-  padding: 0;
-  margin: 0;
   margin-top: 35px;
-  min-width: 100vh;
 }
-.footer .contact .container {
-  width: 900px;
-  margin: auto;
-}
-.footer .contact .container .medIc {
+.footer .medIc {
+  margin: 0 10000px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
-.footer .contact .container .r2 hr {
+.footer .r2 {
+  display: flex;
+}
+.footer .r2 hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
   border: 0;
   border-top: 2px solid rgba(216, 213, 213, 0.1);
 }
-.footer .contact .container .r2 p {
+.footer .r2 p {
   color: white;
 }
 
