--- a/src/sass/header.sass
+++ b/src/sass/header.sass
@@ -3,7 +3,8 @@
 
 .header
     height: 100vh
-    background-image: url("../img/bg5.jpg")
+    background-color: #222222
+    // background-image: url("../img/bg5.jpg")
     background-size: cover
     background-position: center
     overflow: hidden
